--- a/BeamService/BeamService.csproj
+++ b/BeamService/BeamService.csproj
@@ -64,16 +64,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ADC.cs" />
-    <Compile Include="AmplitudeSignalFunction.cs" />
+    <Compile Include="Functions\AmplitudeSignalFunction.cs" />
     <Compile Include="Antenna.cs" />
-    <Compile Include="CombyneSignalFunction.cs" />
+    <Compile Include="Functions\CombyneSignalFunction.cs" />
     <Compile Include="Cos2Element.cs" />
     <Compile Include="CosElement.cs" />
-    <Compile Include="CosSignal.cs" />
-    <Compile Include="DiffSignalFunction.cs" />
+    <Compile Include="Functions\CosSignal.cs" />
+    <Compile Include="Functions\DiffSignalFunction.cs" />
     <Compile Include="DigitalAntennaArray.cs" />
     <Compile Include="Digital\BeamForming.cs" />
     <Compile Include="Digital\DigitalAntennaArray2.cs" />
+    <Compile Include="Functions\LFM.cs" />
     <Compile Include="SamplesSignal.cs" />
     <Compile Include="DigitalSpectrum.cs" />
     <Compile Include="Extensions\DispatcherAwaiter.cs" />
@@ -83,12 +84,12 @@
     <Compile Include="Extensions\YieldAsyncAwaitable.cs" />
     <Compile Include="FourierMatrix.cs" />
     <Compile Include="GuigensElement.cs" />
-    <Compile Include="HarmonicSignalFunction.cs" />
+    <Compile Include="Functions\HarmonicSignalFunction.cs" />
     <Compile Include="IAntenna.cs" />
-    <Compile Include="LamdaSignalFunction.cs" />
+    <Compile Include="Functions\LamdaSignalFunction.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="MatrixComplex.cs" />
-    <Compile Include="MuliyplySignalFunction.cs" />
+    <Compile Include="Functions\MuliyplySignalFunction.cs" />
     <Compile Include="PageFunction1.xaml.cs">
       <DependentUpon>PageFunction1.xaml</DependentUpon>
     </Compile>
@@ -108,16 +109,16 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="RadioScene.cs" />
-    <Compile Include="RandomSignal.cs" />
-    <Compile Include="RectSignalFunction.cs" />
+    <Compile Include="Functions\RandomSignal.cs" />
+    <Compile Include="Functions\RectSignalFunction.cs" />
     <Compile Include="Sample.cs" />
-    <Compile Include="SignalFunction.cs" />
+    <Compile Include="Functions\SignalFunction.cs" />
     <Compile Include="SignalValue.cs" />
-    <Compile Include="SinSignal.cs" />
+    <Compile Include="Functions\SinSignal.cs" />
     <Compile Include="AnalogSignalSource.cs" />
     <Compile Include="SpaceSignal.cs" />
     <Compile Include="SpectrumSample.cs" />
-    <Compile Include="SummSignalFunction.cs" />
+    <Compile Include="Functions\SummSignalFunction.cs" />
     <Compile Include="Uniform.cs" />
     <Compile Include="Vibrator.cs" />
     <Compile Include="ViewModel.cs" />
