--- a/BeamForming/BeamForming.csproj
+++ b/BeamForming/BeamForming.csproj
@@ -41,8 +41,8 @@
     <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.WPF.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
     </Reference>
-    <Reference Include="JetBrains.Annotations, Version=2018.3.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
-      <HintPath>..\packages\JetBrains.Annotations.2018.3.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+    <Reference Include="JetBrains.Annotations, Version=2019.1.1.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.2019.1.1\lib\net20\JetBrains.Annotations.dll</HintPath>
     </Reference>
     <Reference Include="MathService">
       <HintPath>..\lib\MathService.dll</HintPath>
@@ -157,9 +157,17 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AntennaLib\AntennaLib.csproj">
+      <Project>{39C2F4B5-2C8E-49F8-90D7-EB2546A5F363}</Project>
+      <Name>AntennaLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BeamService\BeamService.csproj">
       <Project>{ccc78748-4795-4404-b374-791547a6cd91}</Project>
       <Name>BeamService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DSP.Lib\DSP.Lib.csproj">
+      <Project>{FF5B9AD2-57E9-443D-A91F-DA90A672298C}</Project>
+      <Name>DSP.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
